2010-10-06  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        Screensaver starts while watching fullscreen playback.
        https://bugs.webkit.org/show_bug.cgi?id=47299
        <rdar://problem/8478956>

        To disable the Screen Saver, we need to periodically call UpdateSystemActivity().

        * WebView/WebVideoFullscreenController.h: Added _tickleTimer.
        * WebView/WebVideoFullscreenController.mm:
        (-[WebVideoFullscreenController dealloc]): Invalidate _tickleTimer.
        (-[WebVideoFullscreenController _enableTickleTimer]): Create _tickleTimer.
        (-[WebVideoFullscreenController _disableTickleTimer]): Invalidate _tickleTimer.
        (-[WebVideoFullscreenController _tickleTimerFired]): Call UpdateSystemActivity().
        (-[WebVideoFullscreenController updatePowerAssertions]): Call _enableTickleTimer
            or _disableTickleTimer.


Canonical link: https://commits.webkit.org/59919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69318 268f45cc-cd09-0410-ab3c-d52691b4dbfc